# commenter

./: .gitignore  README.md  oha_results.txt
csharp/: .gitignore  Comment.cs  CommentDatabase.cs  Commenter.Dotnet.csproj  Program.cs  README.md
csharp/Migrations/: 20220522203529_Comments.Designer.cs  20220522203529_Comments.cs  CommentDatabaseModelSnapshot.cs
csharp/Pages/: Index.cshtml  Index.cshtml.cs  _ViewImports.cshtml
csharp/Pages/Shared/: _Layout.cshtml
csharp/Properties/: launchSettings.json
golang/: .gitignore  README.md  commenter.go  go.mod  go.sum  go_run.sh
golang/migrations/: 20220521160102_create_comments.up.fizz  schema.sql
golang/models/: comment.go
nodejs_prisma/: .env  .gitignore  README.md  index.mjs  log.mjs  package.json
nodejs_prisma/prisma/: schema.prisma
nodejs_prisma/prisma/migrations/20220522190529_init/: migration.sql
python_sqlalchemy/: .gitignore  README.md  main.py  requirements.txt  serve.py  setup_db.py
python_sqlalchemy/templates/: index.html
rust/: .env  .gitignore  Cargo.toml  README.md
rust/migrations/2022-05-21-165058_create_comments/: up.sql
rust/src/: main.rs  models.rs  schema.rs
