[package]
name = "commenter_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "uuid"] }
dotenv = "0.15.0"
log = "0.4.17"
parking_lot = "0.12.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
